--- a/Scripts Úteis/Gera PDF/HTML.htm
+++ b/Scripts Úteis/Gera PDF/HTML.htm
@@ -5,3 +5,7 @@
 </div>
 <div id="editor"></div>
 <button id="btGerarPDF">gerar PDF</button>
+
+Gera PDF por Lucas Arruda
+
+http://jsfiddle.net/felipe_douradinho/5r4ra6na/1/
